<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo_pc.aktu_lab.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_workshop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/workshops"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.926"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/btn_labs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/labs"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.615"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btn_seminars"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/seminars"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.769"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/aktu_logo"
            android:layout_width="246dp"
            android:layout_height="291dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/aktulogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"
            android:contentDescription="@string/aktulogo" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>